# oiqdb

./: .gitignore  Cargo.toml  README.md  build.rs
.sqlx/: query-4b52ccbc9c7f2a793b3119f237f77b52aa2a9c3e102d71574a05bd90615038dd.json  query-6cae9ec5219cfc4849bd13d39def637743297a3bef05452861db58b5a4a80160.json
doc/db/: test.md
migrations/: 1_setup.sql
reference/: b_buf.txt  b_original.txt  b_resize.txt  g_buf.txt  g_original.txt  g_resize.txt  r_buf.txt  r_original.txt  r_resize.txt  ret
src/: db.rs  imgdb.rs  imglib.rs  iqdb.rs  main.rs  resize.rs  server.rs  signature.rs  sqlite_db.rs
src/iqdb/: db.rs  imgdb.rs
src/signature/: haar.rs
test/: init.env
