[package]
name = "oiqdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
hex = "0.4.3"
image = "0.24.7"
itertools = "0.12.0"
num-traits = "0.2.17"
priority-queue = "1.3.2"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite"] }
tokio = { version = "1.35.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
