[package]
name = "oiqdb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.3", features = ["multipart"] }
axum-core = "0.4.3"
bitvec = "1.0.1"
dotenvy = "0.15.7"
hex = "0.4.3"
hyper-util = { version = "0.1.3", features = ["client-legacy"] } # For axum testing
image = "0.24.7"
itertools = "0.12.0"
num-traits = "0.2.17"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.6.0"
sqlx = { version = "0.7.3", features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.35.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
regex = "1.10.3"