[package]
name = "oiqdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-core = "0.4.3"
axum-test = "15.2.0"
bitvec = "1.0.1"
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
image = "0.25.1"
itertools = "0.13.0"
num-traits = "0.2.19"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tower = "0.4.13"
regex = "1.10.5"
serde-big-array = "0.5.1"
